[tool.poetry]
name = "blue-admin-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
urllib3 = "^1.26.9"
dynconf = "^0.4"
dynaconf = "^3.1.9"
Flask-WTF = "^1.0.1"
mvc-flask = "^2.3.1"

[tool.poetry.dev-dependencies]
ward = "^0.66.0-beta.0"
splinter = {version = "^0.17.0", extras = ["flask"]}
python-dotenv = "^0.20.0"
selenium = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
